# mspec-apps

./: .gitignore  README.md  line_count.sh  requirements.txt
my-sample-store/app/py/: dev.yaml  pyproject.toml
my-sample-store/app/py/src/admin/: __main__.py  gui.py
my-sample-store/app/py/src/admin/employees/: client.py  db.py  gui.py  model.py  server.py
my-sample-store/app/py/src/core/: __init__.py  client.py  db.py  gui.py  server.py  types.py
my-sample-store/app/py/src/store/: __main__.py  gui.py
my-sample-store/app/py/src/store/customers/: client.py  db.py  gui.py  model.py  server.py
my-sample-store/app/py/src/store/products/: client.py  db.py  gui.py  model.py  server.py
my-sample-store/app/py/tests/admin/: perf_employees.py  test_employees.py
my-sample-store/app/py/tests/store/: perf_customers.py  perf_products.py  test_customers.py  test_products.py
simple-social-network/app/py/: dev.yaml  pyproject.toml
simple-social-network/app/py/src/content/: __main__.py  gui.py
simple-social-network/app/py/src/content/event/: client.py  db.py  gui.py  model.py  server.py
simple-social-network/app/py/src/content/post/: client.py  db.py  gui.py  model.py  server.py
simple-social-network/app/py/src/core/: __init__.py  auth.py  client.py  db.py  gui.py  server.py  types.py  util.py
simple-social-network/app/py/src/user/: __main__.py  gui.py
simple-social-network/app/py/tests/content/: perf_event.py  perf_post.py  test_event.py  test_post.py
simple-social-network/app/py/tests/user/: perf_profile.py  test_profile.py
(+47 files in other folders)
