[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'my_sample_store'
version = '0.0.1'
authors = [
  { name='B rad C', email='sample@email.com' },
]
description = 'A sample project for mspec-alpha python app generator'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'uwsgi == 2.0.27',
    'passlib[bcrypt]',
    'bcrypt==4.3.0',
    'python-jose[cryptography]'
]