[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'simple_social_network'
version = '0.0.1'
authors = [
  { name='B rad C', email='sample@email.com' },
]
description = 'A simple social network project'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'uwsgi == 2.0.27',
    'passlib[bcrypt]',
    'python-jose[cryptography]'
]